# surf

./: .gitignore  AGENTS.md  PLANS.md  README.md  README_HANDOFF.md  README_VIZ_ADDON.md  model_instruction.md  pyproject.toml  report_sdf_sparse_vn_surrogate (1).md  wafer_surface_graph_transformer_surrogate  -  修復済み.pptx  wafer_surrogate_impl_focus  -  修復済み.pptx  wafer_time_conditioned_no_multifidelity_surrogate  -  修復済み.pptx
config/: codex_config_snippet.toml
configs/: dataset_3d_test2_pilot_h0006_train.toml  dataset_3d_test2_pilot_train.toml  dataset_3d_test2_pilot_train.yaml  dataset_3d_test2_pilot_train_h0006.toml  dataset_3d_test2_train_eval.yaml  example.toml  example_accuracy.toml  visualization.default.yaml
docs/: ARCHITECTURE.md  CONTEXT.md  EVAL_PROTOCOL.md  GAPS.md  REQUIREMENTS.md  TRACEABILITY.md  VIZ_REQUIREMENTS_ADDON.md  VIZ_SPEC.md  VIZ_TRACEABILITY_ADDON.md
docs/adr/: 0001-initial-decisions.md  0002-constraints.md  0003-yaml-adoption-policy.md  0004-optimization-engine-policy.md  0005-unit-and-dt-semantics.md  0006-material-label-taxonomy.md  0007-sem-observation-modality-contract.md
plans/: EXECPLAN.md
prompts/: checkpoint.prompt.txt  decision.prompt.txt  implement.prompt.txt  review.prompt.txt
scripts/: cleanup_generated.sh  codex_autorun.py  commands.sh  env.sh  eval_dataset_3d_test2_holdout.py  install_optional_full_macos.sh  manage_torchmd_env.sh  preflight.sh  prepare_dataset_3d_test2.py  run.sh  run_dataset_3d_test2_from_yaml.py  run_dataset_3d_test2_pilot.sh  visualize_hole_mesh_3d.py
tasks/: TASKS.md  tasks.json
(+85 files in other folders)
