[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wafer-surrogate"
version = "0.1.0"
description = "Minimal scaffold for wafer surrogate modeling."
readme = "README_HANDOFF.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
